# comic_viewer

./: .editorconfig  .eslintrc.js  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.eslint.json
.github/workflows/: alpha-release.yml  release.yml
src/: App.tsx  EventBus.ts  MainLayout.tsx  NavMenu.tsx  main.tsx  models.ts  router.tsx  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: eyeicon.icns
src-tauri/src/: main.rs  protocol.rs  utils.rs
src-tauri/src/commands/: files.rs  mod.rs
src/components/: ComicView.tsx  ContinuationView.tsx  DirTree.tsx  DoubleView.tsx  FileList.tsx  FileTools.tsx  PicToolbar.tsx  SingleView.tsx
src/queries/: directories.ts
src/states/: dirs.ts  files.ts  zoom.ts
src/utils/: offset_func.ts
