[package]
name = "comic_viewer"
version = "0.2.5"
description = "漫画、条漫简易阅读器"
authors = ["Khadgar"]
license = "MIT"
repository = "https://github.com/vixalie/comic_viewer"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
once_cell = "1.17.0"
tauri = { version = "1.2", features = ["dialog-open", "fs-exists", "fs-read-dir", "fs-read-file", "protocol-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.23", features = ["serde"] }
anyhow = "1.0.68"
thiserror = "1.0.38"
serde_repr = "0.1.10"
tokio = { version = "1.23.1", features = ["full"] }
image = "0.24.5"
uuid = "1.3.0"
mountpoints = "0.2.1"
md-5 = "0.10.5"
urlencoding = "2.1.2"
mime_guess = "2.0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
